add basic proxy for aoe search api
